--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 					<a href="#"><img src="img/icons/youtube3.png"></a>
 				</div>
 				<div class="copyright">
-					<p>LogIn Theme 2016 &copy All Rights Reserved.</p>
+					<p>LogIn Theme 2016 &copy All Rights Reserved <i>Designed by</i> Vladimir Greksa.</p>
 				</div>
 			</div>
 			
